assets/stylesheets/common/chat-message-images.scss
$max_image_height: 150px;

.chat-message {
  aside.onebox {
    width: max-content;
    max-width: -moz-fit-content;
    max-width: fit-content;
  }

  // append selectors to set images to a
  // max height of $max_image_height
  .chat-message-collapser .onebox img:not(.ytp-thumbnail-image),
  .chat-message-collapser img.onebox,
  .chat-message-collapser .chat-uploads img,
  .chat-message-collapser p img,
  aside.onebox .onebox-body .aspect-image-full-size,
  aside.onebox .onebox-body .aspect-image-full-size img {
    object-fit: contain;
    max-height: $max_image_height;
    max-width: 100%;
    width: unset;
  }

  .chat-message-collapser
    .chat-message-collapser-header
    + div
    .chat-message-collapser-youtube {
    object-fit: contain;
    height: $max_image_height;
    width: calc(#{$max_image_height} / 9 * 16);
  }
}

